data/derived/comb/progs/unify/prog3678.ml.out
Characters 51-71:
  n mod 10 :: if n > 0 then digitsOfInt (n / 10);;
                            ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
